# django-automate

./: .coverage  .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-HEADER  MANIFEST.in  Makefile  NOTICE  README.backup.md  README.md  SECURITY.md  dev_runner.py  docker-compose.yml  embed_test.html  index.html  manage.py  mkdocs.yml  mock_mcp_server.py  objects.inv  pyproject.toml  repro_policy.py  sitemap.xml  test_glot.py  test_output.txt  verify_imports.py
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
00_index/: index.html
01_quickstart/: index.html
02_concepts/: index.html
03_tutorials/: index.html
04_how_to_guides/: index.html
05_reference/: index.html
06_extending/: index.html
07_admin_studio/: index.html
08_observability_security/: index.html
09_changelog/: index.html
09_deployment/: index.html
10_examples/: index.html
api/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/mental-model/: index.html
configuration/: index.html
connectors/architecture/: index.html
connectors/n8n/: index.html
connectors/slack/: index.html
connectors/zapier/: index.html
contributing/: index.html
contributing/docs-style-guide/: index.html
deployment/checklist/: index.html
deployment/pypi_setup/: index.html
docs/: 01_quickstart.md  02_concepts.md  03_tutorials.md  04_how_to_guides.md  05_reference.md  06_extending.md  07_admin_studio.md  08_observability_security.md  09_changelog.md  09_deployment.md  10_examples.md  api.md  concepts.md  configuration.md  contributing.md  features.md  governance.md  index.md  installation.md  llm.md  llm_gateway.md
docs/concepts/: architecture.md
docs/connectors/: architecture.md  n8n.md  slack.md  zapier.md
docs/contributing/: docs-style-guide.md
docs/deployment/: checklist.md  pypi_setup.md
docs/extending/: plugin-system.md
docs/features/: datachat.md  embeddable-widget.md  mcp-integration.md  rag.md
docs/guides/: connectors.md  customization.md  first_automation.md  graph_schema.md  integration.md
docs/quickstart/: first-automation.md  install.md
docs/reference/: admin.md  api-base-classes.md  api-compatibility.md  api.md  connectors.md  extension-points.md  models.md  modules.md  outbox-pattern.md  rag-architecture.md  serializers.md  settings.md  templates.md  views.md
docs/security/: ssrf.md  threat-model.md  webhook-signatures.md
docs/studio/: execution-explorer.md  overview.md
examples/: hello_provider.py
examples/demo_app/: db.sqlite3.bak  manage.py  pyproject.toml
examples/demo_app/example_project/: apps.py  settings.py  urls.py  wsgi.py
examples/docker/: Dockerfile  docker-compose.yml
examples/golden_path/: README.md  docker-compose.yml  workflow.json
examples/legacy_connectors/: README.md  slack.py  webhook.py
examples/scripts/: quickstart.py
examples/webhook_to_llm/: README.md  run.py
extending/plugin-system/: index.html
features/: index.html
features/datachat/: index.html
features/embeddable-widget/: index.html
features/mcp-integration/: index.html
features/rag/: index.html
governance/: index.html
guides/connectors/: index.html
guides/customization/: index.html
guides/first_automation/: index.html
guides/graph_schema/: index.html
guides/integration/: index.html
installation/: index.html
llm/: index.html
llm_gateway/: index.html
quickstart/first-automation/: index.html
quickstart/install/: index.html
reference/admin/: index.html
reference/api/: index.html
reference/api-base-classes/: index.html
reference/api-compatibility/: index.html
reference/connectors/: index.html
reference/data-models/: index.html
reference/extension-points/: index.html
reference/models/: index.html
reference/modules/: index.html
reference/outbox-pattern/: index.html
reference/python-api/: index.html
reference/rag-architecture/: index.html
reference/rest-api/: index.html
reference/serializers/: index.html
reference/settings/: index.html
reference/templates/: index.html
reference/views/: index.html
scripts/: check_repo_clean.sh  smoke_django_boot.py
search/: search_index.json
security/ssrf/: index.html
security/threat-model/: index.html
security/webhook-signatures/: index.html
src/automate/: admin.py  apps.py  conf.py  dispatcher.py  dlq.py  ingestion.py  models.py  outbox.py  registry.py  rules.py  runtime.py  secrets_backend.py  signals.py  throttling.py  urls.py  workflow_compiler.py
src/automate_api/: apps.py  urls.py
src/automate_connectors/: apps.py  base.py  errors.py  execution.py  health.py  logging.py  models.py  profiles.py  registry.py  testing.py  types.py
src/automate_core/: chaos.py  context.py  middleware.py  models.py  throttling.py
src/automate_datachat/: admin.py  apps.py  db.py  intelligence.py  memory.py  models.py  permissions.py  registry.py  runtime.py  serializers.py  sqlpolicy.py  urls.py  views.py  viewsets.py
src/automate_governance/: models.py
src/automate_interop/: admin.py  apps.py  flags.py  models.py
src/automate_llm/: __init__.py  admin.py  apps.py  conf.py  errors.py  mcp_client.py  models.py  policy.py  pricing.py  redaction.py  registry.py  safety.py  types.py  validation.py
src/automate_modal/: __init__.py  admin.py  apps.py  contracts.py  engine.py  executor.py  models.py  registry.py
src/automate_observability/: admin.py  apps.py  context.py  logging.py  metrics.py  middleware.py  models.py  service.py  tracing.py
src/automate_rag/: apps.py  models.py  service.py
src/automate_studio/: admin.py  apps.py  urls.py  views.py
src/rag/: __init__.py  admin.py  apps.py  models.py  urls.py
studio/execution-explorer/: index.html
studio/overview/: index.html
tests/: settings.py  test_core.py
tests/automate_rag/: test_foundation.py
tests/connectors/: test_limiter.py  test_slack.py  test_webhook.py
tests/contract/: test_harness.py
tests/core/: test_outbox_reaper.py  test_runtime_critical.py
tests/e2e/: test_concurrency_simple.py  (+8 more)
(+306 files in other folders)
