[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-automate"
dynamic = ["version"]
description = "A powerful automation framework for Django"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["django", "automation", "workflow", "llm", "ai"]
authors = [
  { name = "CodeGraphers", email = "oss@codegraphers.com" },
]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "celery>=5.3",
    "pydantic>=2.5",
    "jsonschema>=4.19",
    "jinja2>=3.1",
    "requests>=2.31",
    "django-json-widget>=1.1.1",
    "django-import-export>=3.3",
    "drf-spectacular>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/automate", 
    "src/automate_core", 
    "src/automate_governance", 
    "src/automate_llm", 
    "src/automate_connectors", 
    "src/automate_interop",
    "src/automate_modal",
    "src/automate_observability",
    "src/automate_studio",
    "src/automate_datachat",
    "src/rag"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "factory-boy>=3.3",
    "black>=23.11",
    "ruff>=0.1.6",
    "mypy>=1.7",
    "django-stubs>=4.2",
    "types-requests>=2.31",
    "tox>=4.11",
]

[project.urls]
Documentation = "https://github.com/codegraphers/django-automate#readme"
Issues = "https://github.com/codegraphers/django-automate/issues"
Source = "https://github.com/codegraphers/django-automate"

[tool.hatch.version]
path = "src/automate/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C", "B", "UP", "N", "SIM", "PL"
]
ignore = ["PLR2004", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "PLR2004", "PLC0415", "E402", "F841", "F401", "SIM105"]
"**/admin.py" = ["PLC0415"]
"**/apps.py" = ["PLC0415"]
"**/management/commands/*.py" = ["PLC0415"]
"src/rag/providers/registry.py" = ["PLC0415"]
"src/rag/models.py" = ["PLC0415"]
"src/automate_llm/**/*" = ["PLC0415"]
"src/automate_modal/**/*" = ["PLC0415"]
"src/automate_studio/**/*" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["automate", "automate_core", "automate_governance", "automate_llm", "automate_connectors", "automate_interop"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "example_project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=automate --cov-report=term-missing"
testpaths = ["tests"]
